syntax = "proto3";
package pt.tecnico.distledger.contract;

// Common definitions of the DistLedger Service contract

enum OperationType {
  OP_UNSPECIFIED = 0;
  OP_TRANSFER_TO = 1;
  OP_CREATE_ACCOUNT = 2;
  OP_DELETE_ACCOUNT = 3;
  OP_SHARE_WITH_OTHERS = 4 ;
}

message Operation {
  OperationType type = 1;
  string userId = 2;
  string destUserId = 3;  //only for transferTo operations
  int32 amount = 4;  //only for transferTo operations
  repeated int32 prevTimeStamp = 5; 
  int32 value = 6;  // for share with others operations
}

message LedgerState {
  repeated Operation ledger = 1;
}

